# ise_intern_pub

./: README.md  pyproject.toml  server.py
src/: convocollect_database.py  convocollect_execution_classes.py  convocollect_pipeline.py  custom_logging.py  db.py  new_server.py  summanote_database.py  summanote_execution_classes.py  summanote_pipeline.py
src/search/: search.py
src/summarize/: summarize.py
src/transcribe/: transcribe.py
static/: index.html
test/: test_summanote_database.py
