[tool.poetry]
name = "ise-intern"
version = "0.1.0"
description = ""
authors = ["jam0818 <n.kawamura0818@gmail.com>"]
readme = "README.md"
packages = [{include = "ise_intern"}]

[tool.poetry.dependencies]
python = "^3.10"
openai-whisper = "^20231117"
python-multipart = "^0.0.6"
google-api-python-client = "^2.110.0"
ja-ginza = "^5.1.3"
pyknp = "^0.6.1"
uvicorn = "^0.27.0.post1"
fastapi = "^0.109.0"
openai = "^1.10.0"
scikit-learn = "^1.4.0"
langchain = "^0.1.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
